django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: edu-naughty-pike
  labels:
    app.kubernetes.io/name: django-deployment
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django-deployment
      app.kubernetes.io/component: web
  template:
    metadata:
      namespace: edu-naughty-pike
      labels:
        app.kubernetes.io/name: django-deployment
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: django-deployment
          image: seregaz1985/django_app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http

---
apiVersion: v1
kind: Service
metadata:
  namespace: edu-naughty-pike
  name: django-deployment
  labels:
    app.kubernetes.io/name: django-deployment
    app.kubernetes.io/component: web
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      nodePort: 30321
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: django-deployment
    app.kubernetes.io/component: web
